# snnu-global-menu

./: .gitignore  README.md  meson.build
data/dbus-interfaces/: com.canonical.AppMenu.Registrar.xml  com.canonical.dbusmenu.xml
src/: main.cpp
src/domain/entities/: MenuItem.hpp  MenuStructure.hpp
src/infra/dbus/: LegacyRegistrar.cpp  LegacyRegistrar.hpp
src/ports/: IMenuProvider.hpp  IMenuTracker.hpp
